角色管理、菜单管理、用户管理、数据库迁移、鉴权中间件

--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,13 @@
         }
     ],
     "license": "MIT",
-    "require": {},
+    "require": {
+        "php": ">=7.2"
+    },
     "autoload": {
+        "files": [
+            "src/helpers.php"
+        ],
         "psr-4": {
             "GepengPHP\\LaravelRBAC\\": "src/"
         }
